crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__multiple__specifier__range.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",1-59",
                    '-',
                ),
                Nom(
                    "1,1-59",
                    Alt,
                ),
            ],
        },
    ),
)
